--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:padding="16dp"
     tools:context=".MainActivity">
+
+
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_above="@id/yourName"
+        android:layout_marginBottom="25dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@android:drawable/editbox_background_normal" />
 
 
     <EditText
@@ -25,8 +37,7 @@
         android:id="@+id/friendName"
         android:layout_width="220dp"
         android:layout_height="65dp"
-        android:layout_above="@id/startButton"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
         android:background="@drawable/textstyle"
         android:hint="@string/yname"
@@ -37,10 +48,13 @@
         android:id="@+id/startButton"
         android:layout_width="180dp"
         android:layout_height="65dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/friendName"
+        android:layout_centerHorizontal="true"
+         android:layout_marginTop="10dp"
         android:background="@drawable/buttonstyle"
         android:text="@string/startquiz"
         android:textSize="20sp" />
+
+
 
 </RelativeLayout>
