--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,12 @@
         android:textColor="@color/textInputColor"/>
 
     <Button
-        android:id="@+id/startButton"
+        android:id="@+id/startQuizButton"
         android:layout_width="200dp"
         android:layout_height="65dp"
         android:layout_below="@id/friendName"
         android:layout_centerHorizontal="true"
-         android:layout_marginTop="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/buttonstyle"
         android:text="@string/startquiz"
         android:textSize="20sp" />
