--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -8,6 +8,12 @@
     tools:context=".Questions_Activity">
 
 
-
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        android:textSize="50sp"
+        android:text="TextView" />
 </RelativeLayout>
