--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -7,13 +7,58 @@
     android:background="@color/colorPrimary"
     tools:context=".Questions_Activity">
 
-
     <TextView
         android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textChoice1"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_above="@id/textChoice2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/questiontextstyle"
+        android:text="TextView"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/textChoice2"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/questiontextstyle"
+        android:text="TextView"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/textChoice3"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_below="@id/textChoice2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/questiontextstyle"
+        android:text="TextView"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/textNumberQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textChoice3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        android:textSize="50sp"
-        android:text="TextView" />
+        android:layout_marginTop="65dp"
+        android:text="1/10"
+        android:textColor="@color/textColor"
+        android:textSize="24sp"
+        android:textStyle="bold|italic" />
 </RelativeLayout>
