--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -8,12 +8,12 @@
     tools:context=".Questions_Activity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewQuestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:text="How long have you known Carlos?"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="28sp"
