--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#21B3FE</color>
+    <color name="colorPrimary">#f47142</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="textColor">#FFFFFF</color>
-    <color name="btnColor">#8cdb2b</color>
+    <color name="btnColor">#42bff4</color>
     <color name="textInputColor">#040700</color>
 </resources>
