Added max lines 1 and input type restrictions to the edit text views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,8 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/textstyle"
         android:hint="@string/yname"
+        android:maxLines="1"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/textInputColor"/>
 
@@ -42,6 +44,8 @@
         android:background="@drawable/textstyle"
         android:hint="@string/fname"
         android:textAlignment="center"
+        android:maxLines="1"
+        android:inputType="text"
         android:textColor="@color/textInputColor"/>
 
     <Button
